# dl-fundamentals

./: Makefile  README.md  pyproject.toml
dl/: LICENSE  pyproject.toml
dl/unit1/: exercise-executed.ipynb  exercise.ipynb  exercise1-2.ipynb
dl/unit2/: exercise1-2.ipynb
dl/unit3/: exercise1-2.ipynb
