[tool.poetry]
name = "dl"
version = "0.1.0"
description = ""
authors = ["luis-tunes <luis.tunesl@nos.pt>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.23.1"
pandas = "1.4.3"
matplotlib = "3.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
jupyter = "^1.1.1"
nbconvert = "^7.16.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
